@@ -2,6 +2,7 @@ Revision history for CGI-Info
 
 0.94
 	number types can also have min and max values
+	Now logs all messages in the array messages.  The warnings array has been removed.
 
 0.93	Wed Feb 26 09:47:02 EST 2025
 	Use facility local0
